feat: swagger docs for new category responses
