# backend/docs/swagger.json
@@ -26,7 +26,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.CategoryListResponse"
+                            "$ref": "#/definitions/utils.PaginatedCategoriesResponse"
                         }
                     },
                     "401": {
@@ -119,7 +119,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/utils.CategoryResponse"
                         }
                     },
                     "400": {
@@ -879,17 +879,14 @@
                 }
             }
         },
-        "utils.CategoryListResponse": {
+        "utils.CategoryResponse": {
             "type": "object",
             "properties": {
                 "id": {
                     "type": "integer"
                 },
                 "name": {
-                    "type": "integer"
-                },
-                "user_id": {
-                    "type": "integer"
+                    "type": "string"
                 }
             }
         },
@@ -921,6 +918,29 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "utils.PaginatedCategoriesResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/utils.CategoryResponse"
+                    }
+                },
+                "limit": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                },
+                "totalPages": {
+                    "type": "integer"
                 }
             }
         },
